--- a/signin.html
+++ b/signin.html
@@ -11,27 +11,27 @@
     <header>
       <a class="sign-banner" href="/" alt="랜딩페이지">
         <img class="sign-banner-img" src="./image/sign-panda.png" alt="sign-logo" />
-        <h2 class="sign-title">판다마켓</h2>
+        <h2 class="sign-title font-heading">판다마켓</h2>
       </a>
     </header>
     <!-- 메인 -->
     <main>
       <form class="sign-form">
         <div>
-          <label for="e-mail">이메일</label>
-          <input id="e-mail" name="e-mail" placeholder="이메일을 입력해주세요" type="email" />
+          <label for="email">이메일</label>
+          <input id="email" name="email" placeholder="이메일을 입력해주세요" type="email" />
         </div>
         <div>
           <label for="password">비밀번호</label>
           <div class="password-box">
             <input id="password" name="password" placeholder="비밀번호를 입력해주세요" type="password" />
-            <span id="togglePassword" onclick="Visibility()"><img src="./image/icon/invisible.svg" /></span>
+            <span id="togglePassword" onclick="Visibility('password')"><img src="./image/icon/invisible.svg" /></span>
           </div>
         </div>
         <button>로그인</button>
-        <div class="sign-social">
-          <p class="text">간편 로그인하기</p>
-          <div class="icon">
+        <div class="social-login">
+          <p class="description">간편 로그인하기</p>
+          <div class="button-box">
             <a href="https://www.google.com/"><img src="./image/icon/google.svg" alt="구글-로그인" /></a>
             <a href="https://www.kakaocorp.com/page/"><img src="./image/icon/kakao.png" alt="카카오-로그인" /></a>
           </div>
