Feat(social share)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="panda" />
-    <meta property="og:url" content="페이지 URL" />
+    <meta property="og:url" content="https://neview-sprint3.netlify.app/" />
     <meta property="og:title" content="판다마켓" />
     <meta property="og:description" content="일상의 모든 물건을 거래해보세요" />
     <meta property="og:image" content="./image/social-share.jpg" />
