--- a/signin.html
+++ b/signin.html
@@ -25,10 +25,10 @@
           <label for="password">비밀번호</label>
           <div class="password-box">
             <input id="password" name="password" placeholder="비밀번호를 입력해주세요" type="password" />
-            <span id="togglePassword" onclick="Visibility('password')"><img src="./image/icon/invisible.svg" /></span>
+            <img id="toggle-password" src="./image/icon/invisible.svg" />
           </div>
         </div>
-        <button>로그인</button>
+        <button class="sign-form__button">로그인</button>
         <div class="social-login">
           <p class="description">간편 로그인하기</p>
           <div class="button-box">
@@ -42,6 +42,8 @@
         </div>
       </form>
     </main>
-    <script src="signin.js"></script>
+    <script src="./sign.js"></script>
+    <script src="./password-eye.js"></script>
+    <script src="./sign-button.js"></script>
   </body>
 </html>
