--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="panda" />
-    <meta property="og:url" content="https://neview-sprint3.netlify.app/" />
+    <meta property="og:url" content="https://neview-sprint4.netlify.app/" />
+    <!-- 미션에따라 수정해야함 숫자 -->
     <meta property="og:title" content="판다마켓" />
     <meta property="og:description" content="일상의 모든 물건을 거래해보세요" />
     <meta property="og:image" content="./image/social-share.jpg" />
@@ -20,7 +21,7 @@
           <img src="./image/icon/panda-log.svg" alt="로고" />
           <span class="logo-title font-heading">판다마켓</span>
         </a>
-        <a class="gnb__login-button" href="./signin.html">로그인</a>
+        <a class="gnb__login-button" href="./sign/signin.html">로그인</a>
       </div>
     </header>
     <!-- 배너 -->
