--- a/sign/signup.html
+++ b/sign/signup.html
@@ -39,7 +39,7 @@
             <img id="toggle-repassword" src="../image/icon/invisible.svg" />
           </div>
         </div>
-        <a class="sign-form__button" href="">회원가입</a>
+        <a class="sign-form__button">회원가입</a>
         <div class="social-login">
           <p class="description">간편 로그인하기</p>
           <div class="button-box">
